Revert "feat: Implement dynamic restaurant configuration updates for meta tags and manifest, enhancing PWA support and user experience"
This reverts commit b517e3c4ba23cfd0e99cf647dbd87c9b4141c0da.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title id="page-title">Loading...</title>
-    <meta name="description" id="page-description" content="Loading restaurant information..." />
-    <meta property="og:title" id="og-title" content="Restaurant" />
-    <meta property="og:description" id="og-description" content="Quality food and service" />
+    <title>Ravintola Babylon - Pizza, Kebab & Lounasbuffet Lahti</title>
+    <meta name="description" content="Ravintola Babylon Utissa tarjoaa tuoreita pizzoja, maukkaita kebabeja ja lounasbuffetin. Tilaa verkossa tai soita +358-3781-2222. Vapaudenkatu 28, 15140 Lahti." />
+    <meta property="og:title" content="Ravintola Babylon - Pizza, Kebab & Lounasbuffet Lahti" />
+    <meta property="og:description" content="Ravintola Babylon Utissa tarjoaa tuoreita pizzoja, maukkaita kebabeja ja lounasbuffetin. Tilaa verkossa tai soita +358-3781-2222." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
