--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Ravintola Babylon - Pizza, Kebab & Lounasbuffet Lahti</title>
-    <meta name="description" content="Ravintola Babylon Utissa tarjoaa tuoreita pizzoja, maukkaita kebabeja ja lounasbuffetin. Tilaa verkossa tai soita +358-3781-2222. Vapaudenkatu 28, 15140 Lahti." />
-    <meta property="og:title" content="Ravintola Babylon - Pizza, Kebab & Lounasbuffet Lahti" />
-    <meta property="og:description" content="Ravintola Babylon Utissa tarjoaa tuoreita pizzoja, maukkaita kebabeja ja lounasbuffetin. Tilaa verkossa tai soita +358-3781-2222." />
+    <title>Pizzeria Antonio - Pizza, Kebab & Ruokapizzeria</title>
+    <meta name="description" content="Pizzeria Antonio tarjoaa tuoreita pizzoja ja maukkaita kebabeja. Tilaa verkossa tai soita. Aitoa italialaista makua." />
+    <meta property="og:title" content="Pizzeria Antonio - Pizza, Kebab & Ruokapizzeria" />
+    <meta property="og:description" content="Pizzeria Antonio tarjoaa tuoreita pizzoja ja maukkaita kebabeja. Tilaa verkossa!" />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#dc2626">
+    <meta name="theme-color" content="#16A34A">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/generated-icon.png">
   </head>
@@ -20,7 +20,7 @@
     <div id="root">
       <div style="display: flex; justify-content: center; align-items: center; height: 100vh; font-family: Inter, sans-serif;">
         <div style="text-align: center;">
-          <div style="width: 50px; height: 50px; border: 3px solid #dc2626; border-top: 3px solid transparent; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 20px;"></div>
+          <div style="width: 50px; height: 50px; border: 3px solid #16A34A; border-top: 3px solid transparent; border-radius: 50%; animation: spin 1s linear infinite; margin: 0 auto 20px;"></div>
           <p>Sivusto latautuu... / Loading website...</p>
         </div>
       </div>
@@ -40,10 +40,10 @@
       if ('caches' in window) {
         caches.keys().then((cacheNames) => {
           const oldCaches = cacheNames.filter(name => 
-            name.includes('babylon-customer-v1') || 
-            name.includes('babylon-customer-v2') ||
-            name.includes('babylon-static-v1') ||
-            name.includes('babylon-static-v2')
+            name.includes('antonio-customer-v1') || 
+            name.includes('antonio-customer-v2') ||
+            name.includes('antonio-static-v1') ||
+            name.includes('antonio-static-v2')
           );
           
           if (oldCaches.length > 0) {
@@ -79,11 +79,11 @@
         if (e.error && e.error.message && e.error.message.includes('module script')) {
           console.error('❌ Module script error - likely MIME type issue');
           document.getElementById('root').innerHTML = `
-            <div style="padding: 20px; text-align: center; font-family: Inter, sans-serif; color: #dc2626;">
+            <div style="padding: 20px; text-align: center; font-family: Inter, sans-serif; color: #16A34A;">
               <h2>Moduulin latausvirhe / Module Loading Error</h2>
               <p>Sivuston lataus epäonnistui. Yritä päivittää sivu.</p>
               <p>Website loading failed. Please try refreshing the page.</p>
-              <button onclick="clearCacheAndReload()" style="padding: 10px 20px; margin: 10px; background: #dc2626; color: white; border: none; border-radius: 5px; cursor: pointer;">
+              <button onclick="clearCacheAndReload()" style="padding: 10px 20px; margin: 10px; background: #16A34A; color: white; border: none; border-radius: 5px; cursor: pointer;">
                 Tyhjennä välimuisti / Clear Cache
               </button>
               <button onclick="window.location.reload()" style="padding: 10px 20px; margin: 10px; background: #666; color: white; border: none; border-radius: 5px; cursor: pointer;">
@@ -106,11 +106,11 @@
       script.onerror = (e) => {
         console.error('❌ Failed to load main script:', e);
         document.getElementById('root').innerHTML = `
-          <div style="padding: 20px; text-align: center; font-family: Inter, sans-serif; color: #dc2626;">
+          <div style="padding: 20px; text-align: center; font-family: Inter, sans-serif; color: #16A34A;">
             <h2>Latausvirhe / Loading Error</h2>
             <p>Sivuston lataus epäonnistui. Tarkista internetyhteys ja yritä uudelleen.</p>
             <p>Website loading failed. Please check your internet connection and try again.</p>
-            <button onclick="clearCacheAndReload()" style="padding: 10px 20px; margin: 10px; background: #dc2626; color: white; border: none; border-radius: 5px; cursor: pointer;">
+            <button onclick="clearCacheAndReload()" style="padding: 10px 20px; margin: 10px; background: #16A34A; color: white; border: none; border-radius: 5px; cursor: pointer;">
               Tyhjennä välimuisti / Clear Cache
             </button>
             <button onclick="window.location.reload()" style="padding: 10px 20px; margin: 10px; background: #666; color: white; border: none; border-radius: 5px; cursor: pointer;">
